# python_package_template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.slug}}/: .coveragerc  .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  pyproject.toml
{{cookiecutter.slug}}/tests/: test_{{cookiecutter.slug}}.py
{{cookiecutter.slug}}/{{cookiecutter.slug}}/: {{cookiecutter.slug}}.py
