[tool.poetry]
name = "python_package_template"
version = "0.1.0"
description = ""
authors = ["Dima Koskin <dmksknn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
