[tool.poetry]
name = "{{ cookiecutter.slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{% if cookiecutter.license != 'The Unlicense' -%}
license = "{{ cookiecutter.license }}"
{%- endif %}

repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.slug }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.slug }}"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pre-commit = "^1.18"
flake8 = "^3.7"
isort = "^4.3"
pytest = "^5.1"
pytest-cov = "^2.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
